--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
+  <!--  Essential META Tags -->
+  <meta property="og:title" content="TGVE - eAtlas">
+  <meta property="og:description" content="Turing Geovisualization Engine (on GH pages).">
+  <meta property="og:image" content="https://user-images.githubusercontent.com/408568/76419738-c46edc80-6398-11ea-8bbe-496394f90adc.png">
+  <meta property="og:url" content="https://layik.github.io/eAtlas">
+  <meta name="twitter:card" content="https://user-images.githubusercontent.com/408568/76419738-c46edc80-6398-11ea-8bbe-496394f90adc.png">
+
+  <!--  Non-Essential, But Recommended -->
+
+  <meta property="og:site_name" content="TGVE - eAtlas">
+  <meta name="twitter:image:alt" content="A simpe dataset on TGVE">
+
+  <!--  Non-Essential, But Required for Analytics -->
+  <!-- <meta property="fb:app_id" content="your_app_id" />
+  <meta name="twitter:site" content="@website-username"> -->
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
