--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,17 @@
   <meta property="og:description" content="Turing Geovisualization Engine (on GH pages).">
   <meta property="og:image" content="https://user-images.githubusercontent.com/408568/76419738-c46edc80-6398-11ea-8bbe-496394f90adc.png">
   <meta property="og:url" content="https://layik.github.io/eAtlas">
-  <meta name="twitter:card" content="https://user-images.githubusercontent.com/408568/76419738-c46edc80-6398-11ea-8bbe-496394f90adc.png">
 
   <!--  Non-Essential, But Recommended -->
 
   <meta property="og:site_name" content="TGVE - eAtlas">
   <meta name="twitter:image:alt" content="A simpe dataset on TGVE">
+  <meta name="twitter:card" content="summary_large_image">
+  <!-- <meta name="twitter:site" content="@nytimes"> -->
+  <meta name="twitter:creator" content="@layik">
+  <meta name="twitter:title" content="Turing Geovisualization Engine">
+  <meta name="twitter:description" content="Turing Geovisualization Engine (on GH pages).">
+  <meta name="twitter:image" content="https://user-images.githubusercontent.com/408568/76419738-c46edc80-6398-11ea-8bbe-496394f90adc.png">
 
   <!--  Non-Essential, But Required for Analytics -->
   <!-- <meta property="fb:app_id" content="your_app_id" />
